REFACTOR - FirestationService and Unit Test